# pydeepsar

./: .buildinfo  .gitignore  .makim.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  CHANGELOG.md  Makefile  README.md  changelog.html  contributing.html  example.html  genindex.html  governance.md  index.html  installation.html  modules.rst  objects.inv  py-modindex.html  pydeepsar.io.rst  pydeepsar.models.rst  pydeepsar.rst  pydeepsar.util.rst  pyproject.toml  readme.html  search.html  searchindex.js
.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree  installation.doctree  readme.doctree
.doctrees/api/: index.doctree  references.doctree
.doctrees/api/pydeepsar/: index.doctree
.doctrees/api/pydeepsar/__main__/: index.doctree
.doctrees/api/pydeepsar/cli/: index.doctree
.doctrees/api/pydeepsar/coherence_model/: index.doctree
.doctrees/api/pydeepsar/io/: index.doctree
.doctrees/api/pydeepsar/models/: index.doctree
.doctrees/api/pydeepsar/pydeepsar/: index.doctree
.doctrees/api/pydeepsar/util/: index.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation-report.yml  feature-request.yml
.github/workflows/: main.yaml  release.yaml
_sources/: example.ipynb.txt  index.rst.txt  installation.md.txt
_sources/api/: index.rst.txt
_sources/api/pydeepsar/: index.rst.txt
api/: index.html  references.html
api/pydeepsar/: index.html
api/pydeepsar/__main__/: index.html
api/pydeepsar/cli/: index.html
api/pydeepsar/coherence_model/: index.html
api/pydeepsar/io/: index.html
api/pydeepsar/io/xr/: index.html
api/pydeepsar/models/: index.html
api/pydeepsar/pydeepsar/: index.html
api/pydeepsar/util/: index.html
conda/: dev.yaml
containers/: Dockerfile
docs/: conf.py  contributing.md  installation.md  make.bat
docs/source/: conf.py  contributing.md  index.rst  installation.md  readme.md
docs/source/api/: references.rst
pydeepsar/: __init__.py  __main__.py
pydeepsar/io/: addband2geo.py  taxigeocoding.py  xr.py
pydeepsar/models/: coherene.py  inference.py  layers.py
pydeepsar/util/: callback.py  plot.py
scripts/: convert_ras.py  inference.sh
tests/: __init__.py  models_test.py  pydeepsar_test.py  test_pydeepsar.py
(+21 files in other folders)
