[tool.poetry]
name = "pydeepsar"
version = "0.1.0"  # semantic-release
description = "This Project aims to ..."
authors = ["Islam Mansour <is3mansour@gmail.com>"]
packages = [
  {include = "pydeepsar"},
]
license = "GNU General Public License v3"
exclude = [
  ".git/*",
  ".env*",
]
include = ["pydeepsar/py.typed"]

[tool.poetry.dependencies]
python = "^3.9.1"
tensorflow = "^2.15.0"

[tool.poetry.dev-dependencies]
urllib3 = "<2"  # fix poetry issues
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
flake8 = ">=4.0.1, <7"
ruff = "^0.0.278"
mypy = "^1.3.0"
bandit = "^1.7.5"
pydocstyle = "^6.3.0"
vulture = "^2.7"
mccabe = "^0.6.1"
# if you want to use docker-compose from your system, remove compose-go here
compose-go = "^2.18.1"
ipython = "<8"
ipykernel = ">=6.0.0"
Sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.2"
importlib-metadata = "^6.5.1"
myst-parser = "^0.19.2"
nbsphinx = "^0.9.2"
pandoc = "^2.3"
makim ="^1.8.3"



[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 79
target-version = ["py38"]
force-exclude = '''(?x)(
    docs/*
  | .*\\.egg-info
)'''  # TOML's single-quoted strings do not require escaping backslashes

[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "*.egg-info"]

[tool.bandit]
exclude_dirs = ["tests"]
targets = "./"

[tool.vulture]
exclude = ["tests"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = ["./"]
sort_by_size = true
verbose = false

[tool.ruff]
line-length = 79
force-exclude = true
src = ["./"]
exclude = [
  'docs',
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "RUF", # Ruff-specific rules
  "I001",  # isort
]
fixable = ["I001"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.isort]
# Use a single line between direct and from import
lines-between-types = 1

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
